...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editText_email"
                android:layout_width="@dimen/d_300"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/d_50"
                android:background="@drawable/text_frame"
                android:ems="10"
                android:fontFamily="@font/aldrich"
...
                android:gravity="center_horizontal"
                app:layout_constraintTop_toBottomOf="@+id/editText_email"
                android:layout_marginTop="@dimen/d_15"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editText_password"
                    android:layout_width="@dimen/d_270"
                    android:layout_height="wrap_content"
                    android:background="@drawable/text_frame_password"
                    android:fontFamily="@font/aldrich"
                    android:hint="@string/password"
                    android:inputType="textPassword"
...
                    android:background="@drawable/visible_eye"
                    android:layout_marginTop="@dimen/d_1"
                    app:layout_constraintStart_toEndOf="@+id/editText_password"
                    app:layout_constraintTop_toTopOf="@+id/editText_password"/>
            </LinearLayout>
            <Button
                android:id="@+id/login_button"
                android:layout_width="@dimen/d_160"
                android:layout_height="@dimen/d_50"
                android:text="@string/login"
                app:layout_constraintTop_toBottomOf="@id/editText_password"
                android:textSize="@dimen/f_20"
                android:textColor="@color/white"
...
                android:textColor="@color/dark_green"
                android:textSize="@dimen/f_14"
                app:layout_constraintTop_toBottomOf="@id/login_button"
                tools:ignore="RtlSymmetry" />

            <Button
                android:id="@+id/button_signUp"
                android:layout_width="@dimen/d_150"
                android:layout_height="@dimen/d_23"
                android:text="@string/signup"
                app:layout_constraintTop_toBottomOf="@id/button_retrieving"
                android:textSize="@dimen/f_14"
                android:paddingTop="@dimen/d_2"
...
